--- a/src/Microsoft.CodeAnalysis.Analyzers/Setup/CodeAnalysisDiagnosticsSetup.csproj
+++ b/src/Microsoft.CodeAnalysis.Analyzers/Setup/CodeAnalysisDiagnosticsSetup.csproj
@@ -36,6 +36,7 @@
     <StartArguments>/rootsuffix RoslynDev /log</StartArguments>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
