--- a/src/Roslyn.Diagnostics.Analyzers/VisualBasic/Roslyn.Diagnostics.VisualBasic.Analyzers.vbproj
+++ b/src/Roslyn.Diagnostics.Analyzers/VisualBasic/Roslyn.Diagnostics.VisualBasic.Analyzers.vbproj
@@ -25,6 +25,10 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Analyzer.Utilities\Analyzer.Utilities.csproj">
+      <Project>{f8502e24-5eb1-4cdc-8887-1a0cc8008d96}</Project>
+      <Name>Analyzer.Utilities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Core\Roslyn.Diagnostics.Analyzers.csproj">
       <Project>{B475C173-A39D-4A75-93FF-69C3D2742CAD}</Project>
       <Name>Roslyn.Diagnostics.Analyzers</Name>
@@ -100,7 +104,6 @@
     <Compile Include="BasicUseSpecializedCollectionsSingletonEnumerable.vb" />
     <Compile Include="BasicUseSpecializedCollectionsSingletonEnumerable.Fixer.vb" />
     <Compile Include="BasicInvokeTheCorrectPropertyToEnsureCorrectUseSiteDiagnostics.vb" />
-    <Compile Include="BasicInvokeTheCorrectPropertyToEnsureCorrectUseSiteDiagnostics.Fixer.vb" />
     <Compile Include="BasicDoNotUseGenericCodeActionCreateToCreateCodeAction.vb" />
     <Compile Include="BasicOverrideObjectEqualsObjectWhenImplementingIequatable.vb" />
     <Compile Include="BasicOverrideObjectEqualsObjectWhenImplementingIequatable.Fixer.vb" />
